# football-analysis

./: .env.example  .gitattributes  .gitignore  README.md  main.py  pyproject.toml  yolo_inference.py
camera_movement_estimator/: camera_movement_estimator.py
development_and_analysis/: colour_assignment.ipynb
models/: .gitkeep
output_videos/: .gitkeep
player_ball_assigner/: player_ball_assigner.py
speed_and_distance_estimator/: speed_and_distance_estimator.py
stubs/: .gitkeep
team_assigner/: team_assigner.py
trackers/: tracker.py
training/: football_training_yolo_v26.ipynb  football_training_yolo_v26.py
utils/: bbox_utils.py  video_utils.py
view_transformer/: view_transformer.py
